# tsjax

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: analysis_hendrik_tsfast_usage.md  datasource_refactor_plan.md  feature_plan.md
examples/: 00_minimal_example_jax.py  00_minimal_example_tsfast.py  00_quickstart.py  01_data_pipeline.py  01_wh_benchmark.py  02_transforms.py  03_classification.py  04_tabular_regression.py  05_feature_targets.py  05_model_options.py  06_custom_learner.py  07_low_level_pipeline.py  08_attitude_estimation.py  09_model_comparison.py  identibench_benchmark.py
scripts/: generate_test_data.py
test_data/DampedSinusoids/test/: 000.h5  001.h5  002.h5  003.h5  004.h5  005.h5  006.h5  007.h5  008.h5  009.h5
test_data/DampedSinusoids/train/: 000.h5  001.h5  002.h5  003.h5  004.h5  005.h5  006.h5  007.h5  008.h5  009.h5  (+20 more)
tests/: conftest.py  test_benchmark.py  test_data_pipeline.py  test_loss_functions.py  test_models.py  test_quaternion.py  test_resample.py  test_sampling.py  test_training.py  test_transforms.py  test_viz.py
tsjax/: __init__.py  __main__.py  _core.py  factory.py  hdf5_index.py  learner.py  models.py  pipeline.py  sources.py  stats.py  train.py  transforms.py  validation.py  viz.py
tsjax/data/: __init__.py  benchmark.py  hdf5_index.py  hdf5_store.py  index.py  item_transforms.py  pipeline.py  resample.py  sampling.py  sources.py  stats.py  store.py
tsjax/losses/: __init__.py  classification.py  core.py
tsjax/models/: __init__.py  encoder.py  min_gru.py  mlp.py  norm.py  pool.py  rnn.py  s5.py
tsjax/quaternion/: __init__.py  _algebra.py  _np.py  losses.py  transforms.py  viz.py
tsjax/training/: __init__.py  factory.py  learner.py
(+113 files in other folders)
