[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsjax"
version = "0.1.0"
description = "JAX-based training library for time series system identification"
requires-python = ">=3.10"
dependencies = [
    "grain>=0.2",
    "numpy>=1.24",
    "h5py>=3.0",
    "jax>=0.4",
    "flax>=0.10",
    "optax>=0.2",
    "tqdm>=4.60",
]

[tool.setuptools.packages.find]
include = ["tsjax"]
