[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tsjax"
version = "0.1.0"
description = "JAX-based training library for time series system identification"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
keywords = ["jax", "time-series", "system-identification", "rnn", "flax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "grain>=0.2",
    "numpy>=1.24",
    "h5py>=3.0",
    "jax>=0.4",
    "flax>=0.10",
    "optax>=0.2",
    "tqdm>=4.60",
]

[project.urls]
Repository = "https://github.com/daniel-at/tsjax"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["tsjax"]

[tool.setuptools.package-data]
tsjax = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
